@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2026 Contributors to the Eclipse Foundation.
  * Copyright (c) 1997, 2020 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -14,12 +15,6 @@
  * SPDX-License-Identifier: EPL-2.0 OR GPL-2.0 WITH Classpath-exception-2.0
  */
 
-/*
- * PersistenceManagerimpl.java
- *
- * Created on March 6, 2000
- */
-
 package com.sun.jdo.spi.persistence.support.sqlstore.impl;
 
 import com.sun.jdo.api.persistence.support.JDODataStoreException;
@@ -32,7 +27,6 @@ import com.sun.jdo.api.persistence.support.JDOUserException;
 import com.sun.jdo.api.persistence.support.Query;
 import com.sun.jdo.api.persistence.support.Transaction;
 import com.sun.jdo.spi.persistence.support.sqlstore.ExtentCollection;
-import com.sun.jdo.spi.persistence.support.sqlstore.LogHelperPersistenceManager;
 import com.sun.jdo.spi.persistence.support.sqlstore.PersistenceCapable;
 import com.sun.jdo.spi.persistence.support.sqlstore.PersistenceConfig;
 import com.sun.jdo.spi.persistence.support.sqlstore.PersistenceManager;
@@ -41,6 +35,7 @@ import com.sun.jdo.spi.persistence.support.sqlstore.PersistenceStore;
 import com.sun.jdo.spi.persistence.support.sqlstore.RetrieveDesc;
 import com.sun.jdo.spi.persistence.support.sqlstore.RuntimeVersion;
 import com.sun.jdo.spi.persistence.support.sqlstore.SCOCollection;
+import com.sun.jdo.spi.persistence.support.sqlstore.SQLStateManager;
 import com.sun.jdo.spi.persistence.support.sqlstore.StateManager;
 import com.sun.jdo.spi.persistence.support.sqlstore.ValueFetcher;
 import com.sun.jdo.spi.persistence.support.sqlstore.VersionConsistencyCache;
@@ -49,12 +44,12 @@ import com.sun.jdo.spi.persistence.support.sqlstore.query.QueryImpl;
 import com.sun.jdo.spi.persistence.utility.NullSemaphore;
 import com.sun.jdo.spi.persistence.utility.Semaphore;
 import com.sun.jdo.spi.persistence.utility.SemaphoreImpl;
-import com.sun.jdo.spi.persistence.utility.logging.Logger;
 
 import jakarta.transaction.Status;
 
 import java.io.File;
 import java.io.FilenameFilter;
+import java.lang.System.Logger;
 import java.lang.reflect.Constructor;
 import java.lang.reflect.Field;
 import java.util.ArrayList;
@@ -71,6 +66,10 @@ import java.util.ResourceBundle;
 import java.util.Set;
 
 import org.glassfish.persistence.common.I18NHelper;
+
+import static com.sun.jdo.spi.persistence.support.sqlstore.LogHelperSQLStore.RESOURCE_BUNDLE;
+import static java.lang.System.Logger.Level.DEBUG;
+import static java.lang.System.Logger.Level.TRACE;
 
 public class PersistenceManagerImpl implements PersistenceManager {
     /**
@@ -105,13 +104,13 @@ public class PersistenceManagerImpl implements PersistenceManager {
      * List of all Persistent instances used
      * in this Transaction not yet flushed to the datastore.
      */
-    private List _txCache;
+    private List<StateManager> _txCache;
 
     /**
      * List of all Persistent instances used
      * in this Transaction.
      */
-    private Set _flushedCache;
+    private Set<StateManager> _flushedCache;
 
     /**
      * Map of Persistent instances accessed by this PersistenceManager. Ideally it should be
@@ -119,7 +118,7 @@ public class PersistenceManagerImpl implements PersistenceManager {
      * referenced any more. java.util.WeakHashMap is a weak-key HashMap and thus does not
      * solve this purpose.
      */
-    private Map _weakCache;
+    private Map<Object, StateManager> _weakCache;
 
     /**
      * Intended to be set to true if there is an exception during flush in
@@ -141,7 +140,7 @@ public class PersistenceManagerImpl implements PersistenceManager {
      * 20.
      */
     private static final int _txCacheInitialCapacity = Integer.getInteger(
-      "com.sun.jdo.api.persistence.support.PersistenceManager.dirtyCache.initialCapacity", // NOI18N
+      "com.sun.jdo.api.persistence.support.PersistenceManager.dirtyCache.initialCapacity",
       20).intValue();
 
     /**
@@ -150,7 +149,7 @@ public class PersistenceManagerImpl implements PersistenceManager {
      * uses 20.
      */
     private static final int _flushedCacheInitialCapacity = Integer.getInteger(
-      "com.sun.jdo.api.persistence.support.PersistenceManager.transactionalCache.initialCapacity", // NOI18N
+      "com.sun.jdo.api.persistence.support.PersistenceManager.transactionalCache.initialCapacity",
       20).intValue();
 
     /**
@@ -166,8 +165,8 @@ public class PersistenceManagerImpl implements PersistenceManager {
             f =
                 Float.valueOf(
                   System.getProperty(
-                    "com.sun.jdo.api.persistence.support.PersistenceManager.transactionalCache.loadFactor", // NOI18N
-                    "0.75")).floatValue(); // NOI18N
+                    "com.sun.jdo.api.persistence.support.PersistenceManager.transactionalCache.loadFactor",
+                    "0.75")).floatValue();
         } finally {
             _flushedCacheLoadFactor = f;
         }
@@ -179,7 +178,7 @@ public class PersistenceManagerImpl implements PersistenceManager {
      * uses 20.
      */
     private static final int _weakCacheInitialCapacity = Integer.getInteger(
-      "com.sun.jdo.api.persistence.support.PersistenceManager.globalCache.initialCapacity", // NOI18N
+      "com.sun.jdo.api.persistence.support.PersistenceManager.globalCache.initialCapacity",
       20).intValue();
 
     /**
@@ -195,15 +194,15 @@ public class PersistenceManagerImpl implements PersistenceManager {
             f =
                 Float.valueOf(
                   System.getProperty(
-                    "com.sun.jdo.api.persistence.support.PersistenceManager.globalCache.loadFactor", // NOI18N
-                    "0.75")).floatValue(); // NOI18N
+                    "com.sun.jdo.api.persistence.support.PersistenceManager.globalCache.loadFactor",
+                    "0.75")).floatValue();
         } finally {
             _weakCacheLoadFactor = f;
         }
     }
 
     /** Collection of Query instances created for this pm. */
-    private Collection queries = new ArrayList();
+    private Collection<QueryImpl> queries = new ArrayList<>();
 
     /**
      * Flag for Query
@@ -258,8 +257,8 @@ public class PersistenceManagerImpl implements PersistenceManager {
     /**
      * Pattern for OID class names
      */
-    private static final String oidName_OID = "OID";// NOI18N
-    private static final String oidName_KEY = "KEY";// NOI18N
+    private static final String oidName_OID = "OID";
+    private static final String oidName_KEY = "KEY";
 
     /**
      * Properies object
@@ -308,13 +307,13 @@ public class PersistenceManagerImpl implements PersistenceManager {
     /**
      * The logger
      */
-    private static Logger logger = LogHelperPersistenceManager.getLogger();
+    private static final Logger LOG = System.getLogger(PersistenceManagerImpl.class.getName(), RESOURCE_BUNDLE);
 
     /**
      * I18N message handler
      */
     private final static ResourceBundle messages = I18NHelper.loadBundle(
-            "com.sun.jdo.spi.persistence.support.sqlstore.Bundle",  // NOI18N
+            "com.sun.jdo.spi.persistence.support.sqlstore.Bundle",
             PersistenceManagerImpl.class.getClassLoader());
 
     /**
@@ -325,17 +324,11 @@ public class PersistenceManagerImpl implements PersistenceManager {
         persistenceManagerFactory = pmf;
 
         // Initialize caches as per property values.
-        if (logger.isLoggable(Logger.FINEST)) {
-            Object[] items = new Object[] { new Integer(_txCacheInitialCapacity),
-                                            new Integer(_flushedCacheInitialCapacity),
-                                            new Float(_flushedCacheLoadFactor),
-                                            new Integer(_weakCacheInitialCapacity),
-                                            new Float(_weakCacheLoadFactor) };
-            logger.finest("sqlstore.persistencemgr.cacheproperties", items); // NOI18N
-        }
-        _txCache = new ArrayList(_txCacheInitialCapacity);
-        _flushedCache = new LinkedHashSet(_flushedCacheInitialCapacity, _flushedCacheLoadFactor);
-        _weakCache = new HashMap(_weakCacheInitialCapacity, _weakCacheLoadFactor);
+        LOG.log(TRACE, "sqlstore.persistencemgr.cacheproperties", _txCacheInitialCapacity, _flushedCacheInitialCapacity,
+            _flushedCacheLoadFactor, _weakCacheInitialCapacity, _weakCacheLoadFactor);
+        _txCache = new ArrayList<>(_txCacheInitialCapacity);
+        _flushedCache = new LinkedHashSet<>(_flushedCacheInitialCapacity, _flushedCacheLoadFactor);
+        _weakCache = new HashMap<>(_weakCacheInitialCapacity, _weakCacheLoadFactor);
 
         // create new Transaction object and set defaults
 
@@ -356,21 +349,21 @@ public class PersistenceManagerImpl implements PersistenceManager {
 
         if (_multithreaded) {
             _cacheLock =
-                new SemaphoreImpl("PersistenceManagerImpl.cacheLock"); // NOI18N
+                new SemaphoreImpl("PersistenceManagerImpl.cacheLock");
             _fieldUpdateLock =
-                new SemaphoreImpl("PersistenceManagerImpl.fieldUpdateLock"); // NOI18N
+                new SemaphoreImpl("PersistenceManagerImpl.fieldUpdateLock");
         } else {
             if (_jta == null) {
                 // Non-transactional PersistenceManager can be used in a multithreaded
                 // environment.
                 _cacheLock =
-                    new SemaphoreImpl("PersistenceManagerImpl.cacheLock"); // NOI18N
+                    new SemaphoreImpl("PersistenceManagerImpl.cacheLock");
             } else {
                 _cacheLock =
-                    new NullSemaphore("PersistenceManagerImpl.cacheLock"); // NOI18N
+                    new NullSemaphore("PersistenceManagerImpl.cacheLock");
             }
             _fieldUpdateLock =
-                new NullSemaphore("PersistenceManagerImpl.fieldUpdateLock"); // NOI18N
+                new NullSemaphore("PersistenceManagerImpl.fieldUpdateLock");
         }
     }
 
@@ -405,6 +398,7 @@ public class PersistenceManagerImpl implements PersistenceManager {
     /**
      *
      */
+    @Override
     public boolean isClosed() {
         return _isClosed;
     }
@@ -414,6 +408,7 @@ public class PersistenceManagerImpl implements PersistenceManager {
      * TransactionImpl.afterCompletion in case of the CMT transaction
      * and the status value passed to the method cannot be resolved.
      */
+    @Override
     public void forceClose() {
 
         // Return to pool - TBD if we use pooling of free PMs.
@@ -428,9 +423,9 @@ public class PersistenceManagerImpl implements PersistenceManager {
             current.close();
         }
 
-        Collection c = _weakCache.values();
-        for (Iterator it = c.iterator(); it.hasNext();) {
-            StateManager sm = (StateManager)it.next();
+        Collection<StateManager> c = _weakCache.values();
+        for (Iterator<StateManager> it = c.iterator(); it.hasNext();) {
+            StateManager sm = it.next();
 
             // RESOLVE - do we want to release all references in SM?
             // 1 of two calls below should be removed.
@@ -464,6 +459,7 @@ public class PersistenceManagerImpl implements PersistenceManager {
     /**
      * close the persistence manager
      */
+    @Override
     public void close() {
 
         acquireExclusiveLock();
@@ -487,7 +483,7 @@ public class PersistenceManagerImpl implements PersistenceManager {
 
             if (_activeTransaction || _flushedCache.size() > 0) {
                 throw new JDOException(I18NHelper.getMessage(messages,
-                        "jdo.persistencemanagerimpl.close.activetransaction"));// NOI18N
+                        "jdo.persistencemanagerimpl.close.activetransaction"));
             }
 
             forceClose();
@@ -502,6 +498,7 @@ public class PersistenceManagerImpl implements PersistenceManager {
      * Returns transaction associated with this persistence manager
      * @return transaction    current transaction
      */
+    @Override
     public Transaction currentTransaction() {
         assertIsOpen();
         return _transaction;
@@ -511,6 +508,7 @@ public class PersistenceManagerImpl implements PersistenceManager {
     /** Create a new Query with no elements.
      * @return a new Query instance with no elements.
      */
+    @Override
     public Query newQuery() {
         assertIsOpen();
         QueryImpl q = new QueryImpl(this);
@@ -525,6 +523,7 @@ public class PersistenceManagerImpl implements PersistenceManager {
      * @return the new Query
      * @param compiled another Query from the same JDO implementation
      */
+    @Override
     public Query newQuery(Object compiled) {
         assertIsOpen();
         QueryImpl q = new QueryImpl(this, compiled);
@@ -536,7 +535,8 @@ public class PersistenceManagerImpl implements PersistenceManager {
      * @param cls the Class of the results
      * @return the new Query
      */
-    public Query newQuery(Class cls) {
+    @Override
+    public Query newQuery(Class<?> cls) {
         assertIsOpen();
         QueryImpl q = new QueryImpl(this, cls);
         registerQuery(q);
@@ -549,7 +549,8 @@ public class PersistenceManagerImpl implements PersistenceManager {
      * @param cln the Collection of candidate instances
      * @return the new Query
      */
-    public Query newQuery(Class cls, Collection cln) {
+    @Override
+    public Query newQuery(Class<?> cls, Collection<?> cln) {
         assertIsOpen();
         QueryImpl q = new QueryImpl(this, cls, cln);
         registerQuery(q);
@@ -562,7 +563,8 @@ public class PersistenceManagerImpl implements PersistenceManager {
      * @param filter the Filter for candidate instances
      * @return the new Query
      */
-    public Query newQuery(Class cls, String filter) {
+    @Override
+    public Query newQuery(Class<?> cls, String filter) {
         assertIsOpen();
         QueryImpl q = new QueryImpl(this, cls, filter);
         registerQuery(q);
@@ -576,7 +578,8 @@ public class PersistenceManagerImpl implements PersistenceManager {
      * @param filter the Filter for candidate instances
      * @return the new Query
      */
-    public Query newQuery(Class cls, Collection cln, String filter) {
+    @Override
+    public Query newQuery(Class<?> cls, Collection<?> cln, String filter) {
         assertIsOpen();
         QueryImpl q = new QueryImpl(this, cls, cln, filter);
         registerQuery(q);
@@ -592,7 +595,8 @@ public class PersistenceManagerImpl implements PersistenceManager {
      * @return a Collection of instances
      * @see #newQuery
      */
-    public Collection getExtent(Class persistenceCapableClass,
+    @Override
+    public Collection<?> getExtent(Class<?> persistenceCapableClass,
                                 boolean subclasses) {
         assertIsOpen();
         return new ExtentCollection(this, persistenceCapableClass, subclasses);
@@ -611,6 +615,7 @@ public class PersistenceManagerImpl implements PersistenceManager {
      * @return the PersistenceCapable instance with the specified
      * ObjectId
      */
+    @Override
     public Object getObjectById(Object oid) {
         return getObjectById(oid, false);
     }
@@ -636,21 +641,18 @@ public class PersistenceManagerImpl implements PersistenceManager {
      * @param oid an ObjectId
      * @param validate if the existence of the instance is to be validated
      */
+    @Override
     public Object getObjectById(Object oid, boolean validate) {
-        boolean debug = logger.isLoggable(Logger.FINEST);
-
         assertIsOpen();
         assertActiveTransaction(true);
 
         Object rc = null;
 
-        if (debug) {
-            Object[] items = new Object[] {oid, this,_jta};
-            logger.finest("sqlstore.persistencemgr.getbyobjid", items); // NOI18N
-        }
+        LOG.log(TRACE, "sqlstore.persistencemgr.getbyobjid", oid, this,_jta);
 
-        if (oid == null)
+        if (oid == null) {
             return null;
+        }
 
         StateManager sm = lookupObjectById(oid, null);
         rc = sm.getPersistent();
@@ -676,7 +678,7 @@ public class PersistenceManagerImpl implements PersistenceManager {
                     throw e;
                 } catch (Exception e) {
                     throw new JDOUserException(I18NHelper.getMessage(messages,
-                       "jdo.persistencemanagerimpl.fetchinstance.none"), e);// NOI18N
+                       "jdo.persistencemanagerimpl.fetchinstance.none"), e);
                 }
             }
         }
@@ -693,7 +695,8 @@ public class PersistenceManagerImpl implements PersistenceManager {
      * @param pcClass the Class type of the PersistenceCapable instance to be associated
      * with this StateManager.
      */
-    public StateManager findOrCreateStateManager(Object oid, Class pcClass) {
+    @Override
+    public StateManager findOrCreateStateManager(Object oid, Class<?> pcClass) {
         return lookupObjectById(oid, pcClass);
     }
 
@@ -702,14 +705,14 @@ public class PersistenceManagerImpl implements PersistenceManager {
      * @param oid an ObjectId
      * @param classType the Class type of the returned object or null if not known.
      */
-    private StateManager lookupObjectById(Object oid, Class classType) {
+    private StateManager lookupObjectById(Object oid, Class<?> classType) {
         StateManager sm = null;
 
         // Check the _weakCache for the instance
         try {
             acquireCacheLock();
 
-            sm = (StateManager)_weakCache.get(oid);
+            sm = _weakCache.get(oid);
             if (sm == null) {
                 boolean external = false;
                 // Do NOT look in DB, but create a Hollow instance:
@@ -719,7 +722,7 @@ public class PersistenceManagerImpl implements PersistenceManager {
                     if (classType == null) {
                         // Class not found, report an error
                         throw new JDOUserException(I18NHelper.getMessage(messages,
-                                "jdo.persistencemanagerimpl.getobjectbyid.nometadata"), // NOI18N
+                                "jdo.persistencemanagerimpl.getobjectbyid.nometadata"),
                                 new Object[]{oid});
                     }
                     external = true;
@@ -746,7 +749,7 @@ public class PersistenceManagerImpl implements PersistenceManager {
                     throw e;
                 } catch (Exception e) {
                     throw new JDOUserException(I18NHelper.getMessage(messages,
-                            "jdo.persistencemanagerimpl.fetchinstance.none"), e);// NOI18N
+                            "jdo.persistencemanagerimpl.fetchinstance.none"), e);
                 }
             }
         } finally {
@@ -760,7 +763,7 @@ public class PersistenceManagerImpl implements PersistenceManager {
      * Create a StateManager.
      * @param classType Class of the PersistenceCapable.
      */
-    private StateManager createStateManager(Class classType) {
+    private StateManager createStateManager(Class<?> classType) {
         StateManager rc = _store.getStateManager(classType);
         newInstance(rc);
 
@@ -775,25 +778,17 @@ public class PersistenceManagerImpl implements PersistenceManager {
      * @param pc the PersistenceCapable instance
      * @return the ObjectId of the instance
      */
+    @Override
     public Object getObjectId(Object pc) {
-        boolean debug = logger.isLoggable(Logger.FINEST);
-
         assertIsOpen();
         assertActiveTransaction(true);
 
-        if (debug) {
-            Object[] items = new Object[] {Thread.currentThread(),pc, this, _jta};
-            logger.finest("sqlstore.persistencemgr.getobjid",items); // NOI18N
-        }
+        LOG.log(TRACE, "sqlstore.persistencemgr.getobjid", Thread.currentThread(), pc, this, _jta);
 
         try {
             assertPersistenceCapable(pc);
         } catch (Exception e) {
-            if (debug) {
-                Object[] items = new Object[] {pc, this};
-                logger.finest("sqlstore.persistencemgr.getobjid.notpc",items); // NOI18N
-            }
-
+            LOG.log(TRACE, "sqlstore.persistencemgr.getobjid.notpc", pc, this);
             return null;
         }
 
@@ -803,11 +798,7 @@ public class PersistenceManagerImpl implements PersistenceManager {
             return null;
 
         } else if (sm.getPersistenceManagerInternal() != this) {
-            if (debug) {
-                Object[] items = new Object[] {pc, this, _jta};
-                logger.finest("sqlstore.persistencemgr.getobjid.notpm",items); // NOI18N
-            }
-
+            LOG.log(TRACE, "sqlstore.persistencemgr.getobjid.notpm", pc, this, _jta);
             return null;
         }
 
@@ -821,6 +812,7 @@ public class PersistenceManagerImpl implements PersistenceManager {
      * @return the PersistenceCapable instance representing the
      * same data store object
      */
+    @Override
     public Object getTransactionalInstance(Object pc) {
         assertIsOpen();
         assertActiveTransaction(false);
@@ -850,17 +842,13 @@ public class PersistenceManagerImpl implements PersistenceManager {
      * @param pc a transient instance of a Class that implements
      * PersistenceCapable
      */
+    @Override
     public void makePersistent(Object pc) {
-        boolean debug = logger.isLoggable(Logger.FINEST);
+        LOG.log(TRACE, "sqlstore.persistencemgr.makepersistent", Thread.currentThread(), pc, this, _jta);
 
-        if (debug)
-            {
-            Object[] items = new Object[] {Thread.currentThread(), pc, this, _jta};
-            logger.finest("sqlstore.persistencemgr.makepersistent",items); // NOI18N
-            }
-
-        if (pc == null)
+        if (pc == null) {
             return;        // ignore
+        }
 
         acquireShareLock();
         try {
@@ -868,12 +856,7 @@ public class PersistenceManagerImpl implements PersistenceManager {
             assertActiveTransaction(false);
             assertPersistenceCapable(pc);
             internalMakePersistent((PersistenceCapable) pc);
-            if (debug)
-                {
-                 Object[] items = new Object[] {pc, this, _jta};
-                 logger.finest("sqlstore.persistencemgr.makepersistent.done",items); // NOI18N
-                }
-
+            LOG.log(TRACE, "sqlstore.persistencemgr.makepersistent.done", pc, this, _jta);
         } finally {
             releaseShareLock();
         }
@@ -883,25 +866,31 @@ public class PersistenceManagerImpl implements PersistenceManager {
      * @param pcs an array of transient instances
      * @see #makePersistent(Object pc)
      */
+    @Override
     public void makePersistent(Object[] pcs) {
-        if (pcs == null)
+        if (pcs == null) {
             return;        // ignore
+        }
 
         for (int i = 0; i < pcs.length; i++) {
             makePersistent(pcs[i]);
         }
     }
 
-    public void makePersistent(Collection pcs) {
-        if (pcs == null)
+    @Override
+    public void makePersistent(Collection<?> pcs) {
+        if (pcs == null) {
             return;        // ignore
+        }
 
         makePersistent(pcs.toArray());
     }
 
+    @Override
     public void deletePersistent(Object pc) {
-        if (pc == null)
+        if (pc == null) {
             return;        // ignore
+        }
 
         acquireShareLock();
 
@@ -915,18 +904,22 @@ public class PersistenceManagerImpl implements PersistenceManager {
         }
     }
 
+    @Override
     public void deletePersistent(Object[] pcs) {
-        if (pcs == null)
+        if (pcs == null) {
             return;        // ignore
+        }
 
         for (int i = 0; i < pcs.length; i++) {
             deletePersistent(pcs[i]);
         }
     }
 
-    public void deletePersistent(Collection pcs) {
-        if (pcs == null)
+    @Override
+    public void deletePersistent(Collection<?> pcs) {
+        if (pcs == null) {
             return;        // ignore
+        }
 
         deletePersistent(pcs.toArray());
     }
@@ -938,13 +931,15 @@ public class PersistenceManagerImpl implements PersistenceManager {
      * @return the PersistenceManagerFactory that created
      * this PersistenceManager
      */
+    @Override
     public com.sun.jdo.api.persistence.support.PersistenceManagerFactory getPersistenceManagerFactory() {
         return persistenceManagerFactory;
     }
 
     void setPersistenceManagerFactory(PersistenceManagerFactory pmf) {
-        if (persistenceManagerFactory == null)
+        if (persistenceManagerFactory == null) {
             persistenceManagerFactory = pmf;
+        }
     }
 
     /** The application can manage the PersistenceManager instances
@@ -953,6 +948,7 @@ public class PersistenceManagerImpl implements PersistenceManager {
      * @param o the user instance to be remembered by the PersistenceManager
      * @see #getUserObject
      */
+    @Override
     public void setUserObject(Object o) {
         this._userObject = o;
     }
@@ -963,6 +959,7 @@ public class PersistenceManagerImpl implements PersistenceManager {
      * @return the user object associated with this PersistenceManager
      * @see #setUserObject
      */
+    @Override
     public Object getUserObject() {
         return _userObject;
     }
@@ -975,10 +972,11 @@ public class PersistenceManagerImpl implements PersistenceManager {
      * <li>VersionNumber</li>
      * @return the Properties of this PersistenceManager
      */
+    @Override
     public Properties getProperties() {
         if (_properties == null) {
             _properties = RuntimeVersion.getVendorProperties(
-                    "/com/sun/jdo/spi/persistence/support/sqlstore/sys.properties");// NOI18N
+                    "/com/sun/jdo/spi/persistence/support/sqlstore/sys.properties");
         }
         return _properties;
     }
@@ -990,6 +988,7 @@ public class PersistenceManagerImpl implements PersistenceManager {
      * Object Id.
      * @return      boolean supersedeDeletedInstance flag
      */
+    @Override
     public boolean getSupersedeDeletedInstance () {
         return _supersedeDeletedInstance;
     }
@@ -999,6 +998,7 @@ public class PersistenceManagerImpl implements PersistenceManager {
      * Sets the supersedeDeletedInstance flag for this PersistenceManager.
      * @param flag          boolean supersedeDeletedInstance flag
      */
+    @Override
     public void setSupersedeDeletedInstance (boolean flag) {
         // RESOLVE: synchronization
         _supersedeDeletedInstance = flag;
@@ -1014,6 +1014,7 @@ public class PersistenceManagerImpl implements PersistenceManager {
      * @see PersistenceManager#getObjectById(Object oid)
      * @return      boolean requireCopyObjectId flag
      */
+    @Override
     public boolean getRequireCopyObjectId() {
         return _requireCopyObjectId;
     }
@@ -1029,6 +1030,7 @@ public class PersistenceManagerImpl implements PersistenceManager {
      * @see PersistenceManager#getObjectById(Object oid)
      * @param flag          boolean requireCopyObjectId flag
      */
+    @Override
     public void setRequireCopyObjectId (boolean flag) {
         // RESOLVE: synchronization
         _requireCopyObjectId = flag;
@@ -1043,6 +1045,7 @@ public class PersistenceManagerImpl implements PersistenceManager {
      *
      * @return      boolean requireTrackedSCO flag
      */
+    @Override
     public boolean getRequireTrackedSCO() {
         return _requireTrackedSCO;
     }
@@ -1055,6 +1058,7 @@ public class PersistenceManagerImpl implements PersistenceManager {
      *
      * @param flag          boolean requireTrackedSCO flag
      */
+    @Override
     public void setRequireTrackedSCO (boolean flag) {
         // RESOLVE: synchronization
         _requireTrackedSCO = flag;
@@ -1065,7 +1069,8 @@ public class PersistenceManagerImpl implements PersistenceManager {
      * @param cls the PersistenceCapable Class
      * @return the Class of the ObjectId of the parameter
      */
-    public Class getObjectIdClass(Class cls) {
+    @Override
+    public Class<?> getObjectIdClass(Class<?> cls) {
         PersistenceConfig config = loadPersistenceConfig(cls);
         return config.getOidClass();
     }
@@ -1076,6 +1081,7 @@ public class PersistenceManagerImpl implements PersistenceManager {
      * @param     sm    StateManager
      * @return    new instance of the object
      */
+    @Override
     public Object newInstance(StateManager sm) {
         Object o = null;
 
@@ -1083,10 +1089,10 @@ public class PersistenceManagerImpl implements PersistenceManager {
 
         if (config == null) {
             throw new JDOFatalInternalException(I18NHelper.getMessage(messages,
-                    "jdo.persistencemanagerimpl.newinstance.badsm"));// NOI18N
+                    "jdo.persistencemanagerimpl.newinstance.badsm"));
         }
 
-        Constructor constr = config.getConstructor();
+        Constructor<?> constr = config.getConstructor();
         try {
             if (constr != null) {
                 o = constr.newInstance(new Object[]{sm});
@@ -1097,7 +1103,7 @@ public class PersistenceManagerImpl implements PersistenceManager {
             }
         } catch (Exception e) {
             throw new JDOFatalUserException(I18NHelper.getMessage(messages,
-                    "jdo.persistencemanagerimpl.assertpersistencecapable.error", // NOI18N
+                    "jdo.persistencemanagerimpl.assertpersistencecapable.error",
                     config.getPersistenceCapableClass().getName()), e);
         }
 
@@ -1118,6 +1124,7 @@ public class PersistenceManagerImpl implements PersistenceManager {
      * @return A collection of (persistent) objects unless
      * an aggregate query was specified.
      */
+    @Override
     public Object retrieve(RetrieveDesc action, ValueFetcher parameters)
     {
         acquireShareLock();
@@ -1143,6 +1150,7 @@ public class PersistenceManagerImpl implements PersistenceManager {
      * @return A collection of (persistent) objects unless
      * an aggregate query was specified.
      */
+    @Override
     public Object retrieve(RetrieveDesc action) {
         return retrieve(action, null);
     }
@@ -1150,7 +1158,8 @@ public class PersistenceManagerImpl implements PersistenceManager {
     /**
      * Return a RetrieveDesc given a Class object.
      */
-    public RetrieveDesc getRetrieveDesc(Class classType) {
+    @Override
+    public RetrieveDesc getRetrieveDesc(Class<?> classType) {
         acquireShareLock();
 
         try {
@@ -1165,7 +1174,8 @@ public class PersistenceManagerImpl implements PersistenceManager {
      * Return a RetrieveDesc for a foreign field (relationship) given the
      * Class object for the parent class.
      */
-    public RetrieveDesc getRetrieveDesc(String fieldName, Class classType) {
+    @Override
+    public RetrieveDesc getRetrieveDesc(String fieldName, Class<?> classType) {
         acquireShareLock();
 
         try {
@@ -1182,18 +1192,12 @@ public class PersistenceManagerImpl implements PersistenceManager {
      * at the rollback if it was replaced during transaction execution with another
      * instance with the same object Id.
      */
+    @Override
     public void registerInstance(StateManager sm, Object oid) {
-        boolean debug = logger.isLoggable(Logger.FINEST);
-        if (debug)
-            {
-            Object[] items = new Object[] {Thread.currentThread(), oid, this, _jta};
-            logger.finest("sqlstore.persistencemgr.registerinstance",items); // NOI18N
-            }
-
+        LOG.log(TRACE, "sqlstore.persistencemgr.registerinstance", Thread.currentThread(), oid, this, _jta);
         try {
             acquireCacheLock();
-            if (debug)
-                logger.finest("sqlstore.persistencemgr.registerinstancein_wkc"); // NOI18N
+            LOG.log(TRACE, "sqlstore.persistencemgr.registerinstancein_wkc");
 
             _weakCache.put(oid, sm);
 
@@ -1208,6 +1212,7 @@ public class PersistenceManagerImpl implements PersistenceManager {
     /**
      * Register instance in the transactional cache
      */
+    @Override
     public void registerInstance(StateManager sm, Object oid,
                 boolean throwDuplicateException,
                 boolean forceRegister) {
@@ -1215,11 +1220,7 @@ public class PersistenceManagerImpl implements PersistenceManager {
             oid = sm.getObjectId();
         }
 
-        boolean debug = logger.isLoggable();
-        if (debug) {
-            Object[] items = new Object[] {Thread.currentThread(), oid, sm, this, _jta};
-            logger.finest("sqlstore.persistencemgr.registerinstance",items); // NOI18N
-        }
+        LOG.log(TRACE, "sqlstore.persistencemgr.registerinstance", Thread.currentThread(), oid, sm, this, _jta);
 
         //
         // register in all caches
@@ -1230,17 +1231,14 @@ public class PersistenceManagerImpl implements PersistenceManager {
         try {
             acquireCacheLock();
             if (!_weakCache.containsKey(oid)) {
-                if (debug)
-                    logger.finest("sqlstore.persistencemgr.registerinstancein_wkc"); // NOI18N
-
+                LOG.log(TRACE, "sqlstore.persistencemgr.registerinstancein_wkc");
                 _weakCache.put(oid, sm);
             } else if (throwDuplicateException) {
-                StateManager old = (StateManager)_weakCache.get(oid);
+                StateManager old = _weakCache.get(oid);
                 if (_supersedeDeletedInstance && old.isDeleted()) {
 
-                if (debug)
-                    logger.finer(I18NHelper.getMessage(messages,
-                        "sqlstore.persistencemgr.replacingdeletedinstance", oid)); // NOI18N
+                    LOG.log(DEBUG,
+                        I18NHelper.getMessage(messages, "sqlstore.persistencemgr.replacingdeletedinstance", oid));
 
                     old.markNotRegistered();
                     old.markVerifyAtDeregister();
@@ -1261,16 +1259,14 @@ public class PersistenceManagerImpl implements PersistenceManager {
 
                 } else {
                     throw new JDODuplicateObjectIdException(I18NHelper.getMessage(messages,
-                        "jdo.persistencemanagerimpl.internalmakepersistent.dups"), // NOI18N
+                        "jdo.persistencemanagerimpl.internalmakepersistent.dups"),
                         new Object[]{sm.getPersistent()});
                 }
             }
 
             if (_activeTransaction && (sm.isTransactional() || forceRegister)) {
-                if (debug) {
-                    Object[] items = new Object[] {oid,sm.getPersistent(),this, _jta};
-                    logger.finest("sqlstore.persistencemgr.registerinstancein_txc",items); // NOI18N
-                }
+                Object[] items = new Object[] {oid, sm.getPersistent(), this, _jta};
+                LOG.log(TRACE, "sqlstore.persistencemgr.registerinstancein_txc", items);
 
                 // Need to be carefull not to request registerInstance twice
                 // for a dirty instance.
@@ -1291,17 +1287,13 @@ public class PersistenceManagerImpl implements PersistenceManager {
         }
     }
 
+    @Override
     public void deregisterInstance(Object oid) {
-        boolean debug = logger.isLoggable(Logger.FINEST);
-        if (debug) {
-            Object[] items = new Object[] {oid,this,_jta};
-            logger.finest("sqlstore.persistencemgr.deregisterinstance",items); // NOI18N
-        }
-
+        LOG.log(TRACE, "sqlstore.persistencemgr.deregisterinstance", oid, this, _jta);
         if (oid != null) {
             try {
                 acquireCacheLock();
-                StateManager sm = (StateManager) _weakCache.remove(oid);
+                StateManager sm = _weakCache.remove(oid);
                 removeFromCaches(sm);
             } finally {
                 releaseCacheLock();
@@ -1309,21 +1301,16 @@ public class PersistenceManagerImpl implements PersistenceManager {
         }
     }
 
+    @Override
     public void deregisterInstance(Object oid, StateManager sm) {
-        boolean debug = logger.isLoggable(Logger.FINEST);
-        if (debug) {
-            Object[] items = new Object[] {oid,this,_jta};
-            logger.finest("sqlstore.persistencemgr.deregisterinstance.verify",items); // NOI18N
-        }
-
+        LOG.log(TRACE, "sqlstore.persistencemgr.deregisterinstance.verify", oid, this, _jta);
         try {
             acquireCacheLock();
             Object known = _weakCache.get(oid);
             if (known == sm) {
                 //deregister the instance from weak cache only if it is registered.
                  _weakCache.remove(oid);
-                if (debug)
-                    logger.finest("sqlstore.persistencemgr.deregisterinstance.verified"); // NOI18N
+                LOG.log(TRACE, "sqlstore.persistencemgr.deregisterinstance.verified");
             }
 
             removeFromCaches(sm);
@@ -1354,10 +1341,9 @@ public class PersistenceManagerImpl implements PersistenceManager {
      * Clean instances registered for Version Consistency are verified with
      * the store.
      */
+    @Override
     public void beforeCompletion() {
-        if (logger.isLoggable(Logger.FINEST)) {
-            logger.finest("sqlstore.persistencemgr.beforecompletion"); // NOI18N
-        }
+        LOG.log(TRACE, "sqlstore.persistencemgr.beforecompletion");
 
         assertIsOpen();
         assertActiveTransaction(false);
@@ -1391,7 +1377,7 @@ public class PersistenceManagerImpl implements PersistenceManager {
      */
     private void prepareToUpdate() {
         for (int i = 0; i < _txCache.size(); i++) {
-            StateManager sm = (StateManager)_txCache.get(i);
+            StateManager sm = _txCache.get(i);
             // NOTE: prepareToUpdatePhaseI has the side-effect of adding more objects
             // to the transaction cache.
 
@@ -1400,10 +1386,10 @@ public class PersistenceManagerImpl implements PersistenceManager {
 
         // We only do phase 2 and 3 during commit only.
         if (!_insideFlush) {
-            HashSet phase3sms = new HashSet();
+            HashSet<SQLStateManager> phase3sms = new HashSet<>();
 
-            for (Iterator iter = _flushedCache.iterator(); iter.hasNext(); ) {
-                StateManager sm = (StateManager)iter.next();
+            for (Iterator<StateManager> iter = _flushedCache.iterator(); iter.hasNext(); ) {
+                StateManager sm = iter.next();
                 // NOTE: prepareToUpdatePhaseII has the side-effect of adding state managers
                 // to the phase3sms HashSet which need to have prepareToUpdatePhaseIII()
                 // called on them
@@ -1411,14 +1397,14 @@ public class PersistenceManagerImpl implements PersistenceManager {
                 sm.prepareToUpdatePhaseII(phase3sms);
             }
 
-            Iterator iter = phase3sms.iterator();
+            Iterator<SQLStateManager> iter = phase3sms.iterator();
 
             // phase3sms should contain all the non-reachable autopersistence instance.
             // We need to call prepareToUpdatePhaseIII on them to make sure we roll
             // back any changes that may have been flushed to the datastore.
 
             while (iter.hasNext()) {
-                StateManager sm = (StateManager) iter.next();
+                StateManager sm = iter.next();
                 sm.prepareToUpdatePhaseIII();
             }
         }
@@ -1432,13 +1418,13 @@ public class PersistenceManagerImpl implements PersistenceManager {
      *  because of circular dependencies.
      */
     private void flushTxCache() {
-        List err = flushToDataStore(_txCache);
+        List<StateManager> err = flushToDataStore(_txCache);
 
         // Try to resolve dependencies.
         if (err != null && err.size() > 0) {
-            Iterator iter = err.iterator();
+            Iterator<StateManager> iter = err.iterator();
             while (iter.hasNext()) {
-                ((StateManager) iter.next()).resolveDependencies();
+                iter.next().resolveDependencies();
             }
             // Second flush.
             err = flushToDataStore(err);
@@ -1447,7 +1433,7 @@ public class PersistenceManagerImpl implements PersistenceManager {
         if (err != null && err.size() > 0) {
             _transaction.setRollbackOnly();
             throw new JDOUserException(I18NHelper.getMessage(messages,
-                    "jdo.persistencemanagerimpl.notprocessed"), // NOI18N
+                    "jdo.persistencemanagerimpl.notprocessed"),
                     toPCArray(err));
         }
     }
@@ -1463,10 +1449,10 @@ public class PersistenceManagerImpl implements PersistenceManager {
      * from outside.
      */
     private void verifyFlushedCache() {
-        Iterator iter = _flushedCache.iterator();
+        Iterator<StateManager> iter = _flushedCache.iterator();
 
         while (iter.hasNext()) {
-            StateManager sm = (StateManager)iter.next();
+            StateManager sm = iter.next();
 
             if (sm.hasVersionConsistency() && !sm.verifyPersistent()) {
                 Object [] items = { sm.getPersistent() };
@@ -1474,7 +1460,7 @@ public class PersistenceManagerImpl implements PersistenceManager {
                 // The instance failed the verification with the data store.
                 sm.setVerificationFailed();
                 throw new JDODataStoreException(I18NHelper.getMessage(messages,
-                        "jdo.persistencemanagerimpl.verificationfailed"), items);  // NOI18N
+                        "jdo.persistencemanagerimpl.verificationfailed"), items);
             }
         }
     }
@@ -1489,9 +1475,9 @@ public class PersistenceManagerImpl implements PersistenceManager {
      *   because of unresolved dependencies, null if all
      *   instances could be processed.
      */
-    static private List flushToDataStore(List flushList) {
+    static private List<StateManager> flushToDataStore(List<StateManager> flushList) {
         int size = flushList.size();
-        List errorList = null;
+        List<StateManager> errorList = null;
 
         // The connection initialisation is not neccessary. There
         // are two conditions in TransactionImpl assuring connections
@@ -1502,17 +1488,16 @@ public class PersistenceManagerImpl implements PersistenceManager {
         // transactions are not released until commit
         // Please refer to TransactionImpl.releaseConnection
         for (int i = 0; i < size; i++) {
-            StateManager sm = (StateManager)flushList.get(i);
-            StateManager smNext =
-                (i+1 < size)? (StateManager)flushList.get(i+1) : null;
+            StateManager sm = flushList.get(i);
+            StateManager smNext = (i + 1 < size) ? flushList.get(i + 1) : null;
             sm.updatePersistent(smNext);
         }
 
         for (int i = 0; i < size; i++) {
-            StateManager sm = (StateManager)flushList.get(i);
+            StateManager sm = flushList.get(i);
             if (!sm.isProcessed()) {
                 if (errorList == null) {
-                    errorList = new ArrayList();
+                    errorList = new ArrayList<>();
                 }
 
                 // Dependencies have not been resolved.
@@ -1529,13 +1514,13 @@ public class PersistenceManagerImpl implements PersistenceManager {
      * @param smList List of state managers.
      * @return Array of persistence capable instances.
      */
-    static private Object[] toPCArray(List smList) {
+    static private Object[] toPCArray(List<StateManager> smList) {
         final int size = smList.size();
         if (size > 0) {
-            List pcList = new ArrayList(size);
+            List<Object> pcList = new ArrayList<>(size);
 
             for (int i = 0; i < size; i++) {
-                StateManager sm = (StateManager)smList.get(i);
+                StateManager sm = smList.get(i);
                 pcList.add(sm.getPersistent());
             }
             return pcList.toArray();
@@ -1548,24 +1533,20 @@ public class PersistenceManagerImpl implements PersistenceManager {
      * cleans up transactional cache
      * @param    status        jakarta.transaction.Status
      */
+    @Override
     public void afterCompletion(int status) {
         assertIsOpen();
         _insideCommit = true;
         boolean abort = ((status == Status.STATUS_ROLLEDBACK) ||
                 (status == Status.STATUS_ROLLING_BACK) ||
                 (status == Status.STATUS_MARKED_ROLLBACK));
-        boolean debug = false;
-        debug = logger.isLoggable(Logger.FINEST);
-        if (debug)
-            logger.finest("sqlstore.persistencemgr.aftercompletion",new Boolean(abort)); // NOI18N
+        LOG.log(TRACE, "sqlstore.persistencemgr.aftercompletion", abort);
 
         boolean retainValues = _transaction.getRetainValues();
 
-        for (Iterator iter = _flushedCache.iterator(); iter.hasNext(); ) {
-            StateManager sm = (StateManager)iter.next();
-            if (debug)
-                logger.finest("sqlstore.persistencemgr.aftercompletion.process",sm.getObjectId()); // NOI18N
-
+        for (Iterator<StateManager> iter = _flushedCache.iterator(); iter.hasNext(); ) {
+            StateManager sm = iter.next();
+            LOG.log(TRACE, "sqlstore.persistencemgr.aftercompletion.process",sm.getObjectId());
             if (abort) {
                 rollback(sm, retainValues);
             } else {
@@ -1626,7 +1607,7 @@ public class PersistenceManagerImpl implements PersistenceManager {
         StateManager rc = null;
 
         if (null != sm && sm.hasVersionConsistency()) {
-            Class pcType = sm.getPersistent().getClass();
+            Class<?> pcType = sm.getPersistent().getClass();
             Object oid = sm.getObjectId();
             VersionConsistencyCache vcCache =
                     persistenceManagerFactory.getVersionConsistencyCache();
@@ -1654,7 +1635,7 @@ public class PersistenceManagerImpl implements PersistenceManager {
         StateManager rc = null;
 
         if (null != sm && sm.hasVersionConsistency()) {
-            Class pcType = sm.getPersistent().getClass();
+            Class<?> pcType = sm.getPersistent().getClass();
             Object oid = sm.getObjectId();
             VersionConsistencyCache vcCache =
                     persistenceManagerFactory.getVersionConsistencyCache();
@@ -1667,9 +1648,7 @@ public class PersistenceManagerImpl implements PersistenceManager {
         return rc;
     }
 
-    /**
-     * @inheritDoc
-     */
+    @Override
     public boolean initializeFromVersionConsistencyCache(StateManager sm) {
         boolean rc = false;
         StateManager nonTxSM = lookupFromVersionConsistencyCache(sm);
@@ -1698,7 +1677,7 @@ public class PersistenceManagerImpl implements PersistenceManager {
         StateManager rc = null;
 
         if (null != sm && sm.hasVersionConsistency()) {
-            Class pcType = sm.getPersistent().getClass();
+            Class<?> pcType = sm.getPersistent().getClass();
             Object oid = sm.getObjectId();
             VersionConsistencyCache vcCache =
                 persistenceManagerFactory.getVersionConsistencyCache();
@@ -1708,6 +1687,7 @@ public class PersistenceManagerImpl implements PersistenceManager {
         return rc;
     }
 
+    @Override
     public void setStateManager(Object pc, StateManager sm) {
         if (pc instanceof PersistenceCapable) {
             ((PersistenceCapable) pc).jdoSetStateManager(sm);
@@ -1717,6 +1697,7 @@ public class PersistenceManagerImpl implements PersistenceManager {
     }
 
 
+    @Override
     public void setFlags(Object pc, byte flags) {
         if (pc instanceof PersistenceCapable) {
             ((PersistenceCapable) pc).jdoSetFlags(flags);
@@ -1725,6 +1706,7 @@ public class PersistenceManagerImpl implements PersistenceManager {
         //RESOLVE: Otherwise, should throw an exception.
     }
 
+    @Override
     public byte getFlags(Object pc) {
         if (pc instanceof PersistenceCapable) {
             return ((PersistenceCapable) pc).jdoGetFlags();
@@ -1734,6 +1716,7 @@ public class PersistenceManagerImpl implements PersistenceManager {
         //RESOLVE: Otherwise, should throw an exception.
     }
 
+    @Override
     public StateManager getStateManager(Object pc) {
         if (pc instanceof PersistenceCapable) {
             return ((PersistenceCapable) pc).jdoGetStateManager();
@@ -1744,6 +1727,7 @@ public class PersistenceManagerImpl implements PersistenceManager {
     }
 
 
+    @Override
     public void setField(Object o, int fieldNumber, Object value) {
         if (o instanceof PersistenceCapable) {
             PersistenceCapable pc = (PersistenceCapable) o;
@@ -1753,6 +1737,7 @@ public class PersistenceManagerImpl implements PersistenceManager {
         //RESOLVE: Otherwise, should throw an exception.
     }
 
+    @Override
     public Object getField(Object pc, int fieldNumber) {
         if (pc instanceof PersistenceCapable) {
             return ((PersistenceCapable) pc).jdoGetField(fieldNumber);
@@ -1762,6 +1747,7 @@ public class PersistenceManagerImpl implements PersistenceManager {
         return null;
     }
 
+    @Override
     public void clearFields(Object pc) {
         if (pc instanceof PersistenceCapable) {
             ((PersistenceCapable) pc).jdoClear();
@@ -1779,7 +1765,8 @@ public class PersistenceManagerImpl implements PersistenceManager {
      * @param fieldName the field to notify upon changes
      * @return the object of the class type
      */
-    public Object newSCOInstance(Class type, Object owner, String fieldName) {
+    @Override
+    public Object newSCOInstance(Class<?> type, Object owner, String fieldName) {
         Object obj = null;
 
         if (Collection.class.isAssignableFrom(type)) {
@@ -1806,7 +1793,8 @@ public class PersistenceManagerImpl implements PersistenceManager {
      * @param fieldName the field to notify upon changes
      * @return the object of the class type
      */
-    public Object newSCOInstanceInternal(Class type, Object owner, String fieldName) {
+    @Override
+    public Object newSCOInstanceInternal(Class<?> type, Object owner, String fieldName) {
 
         Object obj = null;
 
@@ -1828,7 +1816,7 @@ public class PersistenceManagerImpl implements PersistenceManager {
 
         } else {
             throw new JDOUserException(I18NHelper.getMessage(messages,
-                    "jdo.persistencemanagerimpl.newscoinstance.wrongclass", // NOI18N
+                    "jdo.persistencemanagerimpl.newscoinstance.wrongclass",
                     type.getName()));
         }
 
@@ -1854,8 +1842,9 @@ public class PersistenceManagerImpl implements PersistenceManager {
      * @param initialSize initial size of the Collection
      * @return the object of the class type
      */
-    public Object newCollectionInstance(Class type, Object owner, String fieldName,
-                                        Class elementType, boolean allowNulls, int initialSize) {
+    @Override
+    public Object newCollectionInstance(Class<?> type, Object owner, String fieldName,
+                                        Class<?> elementType, boolean allowNulls, int initialSize) {
         Object obj = newCollectionInstanceInternal(type, owner, fieldName,
                 elementType, allowNulls, initialSize);
 
@@ -1878,16 +1867,18 @@ public class PersistenceManagerImpl implements PersistenceManager {
      * @param initialSize initial size of the Collection
      * @return the object of the class type
      */
-    public Object newCollectionInstanceInternal(Class type, Object owner, String fieldName,
-                                                Class elementType, boolean allowNulls, int initialSize) {
+    @Override
+    public Object newCollectionInstanceInternal(Class<?> type, Object owner, String fieldName,
+                                                Class<?> elementType, boolean allowNulls, int initialSize) {
         Object obj = null;
 
         // Make sure that the order of type comparison will go from
         // narrow to wide:
         if (type == HashSet.class
                 || type == com.sun.jdo.spi.persistence.support.sqlstore.sco.HashSet.class) {
-            if (initialSize == 0)
+            if (initialSize == 0) {
                 initialSize = 101;
+            }
             obj = new com.sun.jdo.spi.persistence.support.sqlstore.sco.HashSet(
                 owner, fieldName, elementType, allowNulls, initialSize);
 /*
@@ -1901,28 +1892,27 @@ public class PersistenceManagerImpl implements PersistenceManager {
             newType = com.sun.jdo.spi.persistence.support.sqlstore.sco.Vector.class;
 */
         } else if (Set.class.isAssignableFrom(type)) {
-            if (initialSize == 0)
+            if (initialSize == 0) {
                 initialSize = 101;
+            }
             obj = new com.sun.jdo.spi.persistence.support.sqlstore.sco.HashSet(
                 owner, fieldName, elementType, allowNulls, initialSize);
 
         } else if (Collection.class.isAssignableFrom(type)) {
             // We choose to use HashSet as a default collection
             // because we do not support duplicate objects in DB
-            if (initialSize == 0)
+            if (initialSize == 0) {
                 initialSize = 101;
+            }
             obj = new com.sun.jdo.spi.persistence.support.sqlstore.sco.HashSet(
                 owner, fieldName, elementType, allowNulls, initialSize);
 
         } else {
             throw new JDOUserException(I18NHelper.getMessage(messages,
-                    "jdo.persistencemanagerimpl.newscoinstance.wrongclass", // NOI18N
+                    "jdo.persistencemanagerimpl.newscoinstance.wrongclass",
                     type.getName()));
         }
-        boolean debug = logger.isLoggable(Logger.FINEST);
-        if (debug)
-            logger.finest("sqlstore.persistencemgr.newcollection",obj.getClass()); // NOI18N
-
+        LOG.log(TRACE, "sqlstore.persistencemgr.newcollection",obj.getClass());
         return obj;
     }
 
@@ -1932,6 +1922,7 @@ public class PersistenceManagerImpl implements PersistenceManager {
      * flush
      * @see #beforeCompletion()
      */
+    @Override
     public void internalFlush() {
         acquireExclusiveLock();
 
@@ -1959,7 +1950,7 @@ public class PersistenceManagerImpl implements PersistenceManager {
                     //_transaction.rollback();
                 } else {
                     for (int i = 0; i < _txCache.size(); i++) {
-                        StateManager sm = (StateManager)_txCache.get(i);
+                        StateManager sm = _txCache.get(i);
                         sm.flushed();
                     }
                 }
@@ -1977,6 +1968,7 @@ public class PersistenceManagerImpl implements PersistenceManager {
      * For Transaction to notify PersistenceManager that
      * status is changed
      */
+    @Override
     public synchronized void notifyStatusChange(boolean isActive) {
         _activeTransaction = isActive;
     }
@@ -1985,6 +1977,7 @@ public class PersistenceManagerImpl implements PersistenceManager {
      * For Transaction to notify PersistenceManager that
      * optimistic flag is changed
      */
+    @Override
     public synchronized void notifyOptimistic(boolean optimistic) {
         this._optimistic = optimistic;
     }
@@ -1992,11 +1985,9 @@ public class PersistenceManagerImpl implements PersistenceManager {
     /**
      * Returns true if associated transaction is optimistic
      */
+    @Override
     public boolean isOptimisticTransaction() {
-        boolean debug = logger.isLoggable(Logger.FINEST);
-        if (debug)
-            logger.finest("sqlstore.persistencemgr.isoptimistic", new Boolean(_optimistic)); // NOI18N
-
+        LOG.log(TRACE, "sqlstore.persistencemgr.isoptimistic", _optimistic);
         return _optimistic;
     }
 
@@ -2005,6 +1996,7 @@ public class PersistenceManagerImpl implements PersistenceManager {
      * For Transaction to notify PersistenceManager that
      * nontransactionalRead flag is changed
      */
+    @Override
     public synchronized void notifyNontransactionalRead(boolean nontransactionalRead) {
         this._nontransactionalRead = nontransactionalRead;
     }
@@ -2012,12 +2004,9 @@ public class PersistenceManagerImpl implements PersistenceManager {
     /**
      * Returns true if associated transaction is optimistic
      */
+    @Override
     public boolean isNontransactionalRead() {
-        boolean debug = logger.isLoggable(Logger.FINEST);
-        if (debug) {
-            logger.finest("sqlstore.persistencemgr.isnontxread",new Boolean(_nontransactionalRead)); // NOI18N
-        }
-
+        LOG.log(TRACE, "sqlstore.persistencemgr.isnontxread", _nontransactionalRead);
         return _nontransactionalRead;
     }
 
@@ -2025,21 +2014,16 @@ public class PersistenceManagerImpl implements PersistenceManager {
     /**
      * Returns true if associated transaction is active
      */
+    @Override
     public boolean isActiveTransaction() {
-        boolean debug = logger.isLoggable(Logger.FINEST);
-        if (debug)
-             logger.finest("sqlstore.persistencemgr.isactivetx",new Boolean(_activeTransaction)); // NOI18N
-
+        LOG.log(TRACE, "sqlstore.persistencemgr.isactivetx", _activeTransaction);
         return _activeTransaction;
     }
 
     // Returns current wrapper
+    @Override
     public PersistenceManagerWrapper getCurrentWrapper() {
-        boolean debug = logger.isLoggable(Logger.FINEST);
-        if (debug) {
-            logger.finest("sqlstore.persistencemgr.getcurrentwrapper",current); // NOI18N
-        }
-
+        LOG.log(TRACE, "sqlstore.persistencemgr.getcurrentwrapper", current);
         return current;
     }
 
@@ -2049,23 +2033,13 @@ public class PersistenceManagerImpl implements PersistenceManager {
 
     // Remember the current wrapper
     protected void pushCurrentWrapper(PersistenceManagerWrapper pmw) {
-        boolean debug = logger.isLoggable(Logger.FINEST);
-        if (debug) {
-            Object[] items = new Object[] {current,pmw};
-            logger.finest("sqlstore.persistencemgr.pushcurrentwrapper",items); // NOI18N
-        }
-
+        LOG.log(TRACE, "sqlstore.persistencemgr.pushcurrentwrapper", current, pmw);
         current = pmw;
     }
 
     // Replace current wrapper with the previous
     protected void popCurrentWrapper(PersistenceManagerWrapper prev) {
-        boolean debug = logger.isLoggable(Logger.FINEST);
-        if (debug) {
-            Object[] items = new Object[] {current,prev};
-            logger.finest("sqlstore.persistencemgr.popcurrentwrapper",items); // NOI18N
-        }
-
+        LOG.log(TRACE, "sqlstore.persistencemgr.popcurrentwrapper", current, prev);
         current = prev;
         if (!_isClosed && _jta == null && current == null) {
             this.close();
@@ -2080,7 +2054,7 @@ public class PersistenceManagerImpl implements PersistenceManager {
         if (this._jta != null) {
             Object[] items = new Object[] {this._jta, t};
             throw new JDOFatalInternalException(I18NHelper.getMessage(messages,
-                    "jdo.persistencemanagerimpl.setjtatransaction.notnulljta", // NOI18N
+                    "jdo.persistencemanagerimpl.setjtatransaction.notnulljta",
                     items));
         }
         this._jta = t;
@@ -2104,9 +2078,9 @@ public class PersistenceManagerImpl implements PersistenceManager {
      */
     private void disconnectQueries()
     {
-        for (Iterator i = queries.iterator(); i.hasNext();)
+        for (Iterator<QueryImpl> i = queries.iterator(); i.hasNext();)
         {
-            QueryImpl q = (QueryImpl)i.next();
+            QueryImpl q = i.next();
             q.clearPersistenceManager();
         }
         queries.clear();
@@ -2173,11 +2147,11 @@ public class PersistenceManagerImpl implements PersistenceManager {
 
                     if (this != pc.jdoGetStateManager().getPersistenceManagerInternal()) {
                         throw new JDOUserException(I18NHelper.getMessage(messages,
-                                "jdo.persistencemanagerimpl.another_pm"), // NOI18N
+                                "jdo.persistencemanagerimpl.another_pm"),
                                 new Object[]{pc});
                     }
                 } else {
-                    Class classType = pc.getClass();
+                    Class<?> classType = pc.getClass();
                     loadPersistenceConfig(classType);
                     sm = _store.getStateManager(classType);
                 }
@@ -2192,7 +2166,7 @@ public class PersistenceManagerImpl implements PersistenceManager {
     private void internalDeletePersistent(PersistenceCapable pc) {
         if (!(pc.jdoIsPersistent())) {
             throw new JDOException(I18NHelper.getMessage(messages,
-                    "jdo.persistencemanagerimpl.internaldeletepersistent.transient"), // NOI18N
+                    "jdo.persistencemanagerimpl.internaldeletepersistent.transient"),
                     new Object[]{pc});
         }
 
@@ -2201,7 +2175,7 @@ public class PersistenceManagerImpl implements PersistenceManager {
 
         if (this != pm) {
             throw new JDOUserException(I18NHelper.getMessage(messages,
-                    "jdo.persistencemanagerimpl.another_pm"), // NOI18N
+                    "jdo.persistencemanagerimpl.another_pm"),
                     new Object[]{pc});
         }
 
@@ -2218,9 +2192,9 @@ public class PersistenceManagerImpl implements PersistenceManager {
      * @param oid  the Oid
      * @return classtype for the owning Class
      */
-    private Class loadClassForOid(Object oid) {
-        Class oidClass = oid.getClass();
-        Class classType = _store.getClassByOidClass(oidClass);
+    private Class<?> loadClassForOid(Object oid) {
+        Class<?> oidClass = oid.getClass();
+        Class<?> classType = _store.getClassByOidClass(oidClass);
         if (classType != null) {
             // Found in the DataStore
             return classType;
@@ -2258,12 +2232,8 @@ public class PersistenceManagerImpl implements PersistenceManager {
             return;
         }
 
-        boolean debug = logger.isLoggable(Logger.FINEST);
-        if (debug)
-            logger.finest("sqlstore.persistencemgr.loadingclass",s); // NOI18N
-
-
-        Class oidClass = null;
+        LOG.log(TRACE, "sqlstore.persistencemgr.loadingclass", s);
+        Class<?> oidClass = null;
 
         try {
             // take current class loader if not specified
@@ -2274,7 +2244,7 @@ public class PersistenceManagerImpl implements PersistenceManager {
 
         } catch (Exception e) {
             throw new JDOFatalUserException(I18NHelper.getMessage(messages,
-                    "jdo.persistencemanagerimpl.loadclassforoid.wrongoidclass"), e);// NOI18N
+                    "jdo.persistencemanagerimpl.loadclassforoid.wrongoidclass"), e);
         }
 
         loadPersistenceConfig(oidClass);
@@ -2285,12 +2255,9 @@ public class PersistenceManagerImpl implements PersistenceManager {
      */
     private void assertIsOpen() {
         if (_isClosed) {
-            boolean debug = logger.isLoggable(Logger.FINEST);
-            if (debug) {
-                logger.finest("sqlstore.persistencemgr.assertisopen",this); // NOI18N
-            }
+            LOG.log(TRACE, "sqlstore.persistencemgr.assertisopen", this);
             throw new JDOFatalUserException(I18NHelper.getMessage(messages,
-                    "jdo.persistencemanagerimpl.assertclosed.closed"));// NOI18N
+                    "jdo.persistencemanagerimpl.assertclosed.closed"));
         }
     }
 
@@ -2298,23 +2265,15 @@ public class PersistenceManagerImpl implements PersistenceManager {
      * assert that the associated Transaction is active but allows to do commit processing.
      */
     private void assertActiveTransaction(boolean insideQuery) {
-        boolean debug = false;
-
-        debug = logger.isLoggable(Logger.FINEST);
-
-        if (debug) {
-            logger.finest("sqlstore.persistencemgr.assertactivetx",_transaction); // NOI18N
+        LOG.log(TRACE, "sqlstore.persistencemgr.assertactivetx",_transaction);
+        if (_insideCommit || (insideQuery && _transaction.getNontransactionalRead())) {
+            return;
         }
 
-        if (_insideCommit || (insideQuery && _transaction.getNontransactionalRead()))
-            return;
-
         if (!_activeTransaction) {
-            if (debug) {
-                logger.finest("sqlstore.persistencemgr.assertactivetx.closed",this); // NOI18N
-            }
+            LOG.log(TRACE, "sqlstore.persistencemgr.assertactivetx.closed", this);
             throw new JDOException(I18NHelper.getMessage(messages,
-                    "jdo.persistencemanagerimpl.assertactivetransaction.error"));// NOI18N
+                    "jdo.persistencemanagerimpl.assertactivetransaction.error"));
         }
     }
 
@@ -2324,7 +2283,7 @@ public class PersistenceManagerImpl implements PersistenceManager {
     private void assertPersistenceCapable(Object pc) {
         if (!(pc instanceof PersistenceCapable)) {
             throw new JDOException(I18NHelper.getMessage(messages,
-                    "jdo.persistencemanagerimpl.assertpersistencecapable.error", // NOI18N
+                    "jdo.persistencemanagerimpl.assertpersistencecapable.error",
                     pc.getClass().getName()), new Object[]{pc});
         }
     }
@@ -2336,8 +2295,9 @@ public class PersistenceManagerImpl implements PersistenceManager {
      */
     private void setKeyFields(StateManager sm) {
         Object o = sm.getPersistent();
-        if (o == null)
+        if (o == null) {
             return;
+        }
 
         Object oid = sm.getObjectId();
         try {
@@ -2351,14 +2311,11 @@ public class PersistenceManagerImpl implements PersistenceManager {
             }
 
         } catch (Exception e) {
-            //e.printStackTrace();
-            boolean debug = logger.isLoggable(Logger.FINEST);
-            if (debug)
-                logger.finest("sqlstore.persistencemgr.setkeyfields",e); // NOI18N
+            LOG.log(TRACE, "sqlstore.persistencemgr.setkeyfields", e);
         }
     }
 
-    private PersistenceConfig loadPersistenceConfig(Class classType) {
+    private PersistenceConfig loadPersistenceConfig(Class<?> classType) {
         return _store.getPersistenceConfig(classType);
     }
 
@@ -2369,19 +2326,18 @@ public class PersistenceManagerImpl implements PersistenceManager {
      * @return     object     local copy
      */
     private Object internalCloneOid(Object oid, StateManager sm) {
-        if (oid == null)
+        if (oid == null) {
             return null;
+        }
 
         if (!_requireCopyObjectId) {
             return oid;
         }
 
-        boolean debug = logger.isLoggable(Logger.FINEST);
-
         Object newoid = null;
         try {
-            Class oidClass = oid.getClass();
-            newoid = oidClass.newInstance();
+            Class<?> oidClass = oid.getClass();
+            newoid = oidClass.getDeclaredConstructor().newInstance();
             PersistenceConfig config = sm.getPersistenceConfig();
             Field keyFields[] = config.getKeyFields();
 
@@ -2392,18 +2348,11 @@ public class PersistenceManagerImpl implements PersistenceManager {
             }
 
         } catch (Exception e) {
-            //e.printStackTrace();
-            if (debug)
-                logger.finest("sqlstore.persistencemgr.internalcloneoid",e); // NOI18N
+            LOG.log(TRACE, "sqlstore.persistencemgr.internalcloneoid",e);
             newoid = null;
         }
 
-        if (debug)
-            {
-            Object[] items = new Object[] {oid , newoid, new Boolean((oid == newoid))};
-            logger.finest("sqlstore.persistencemgr.internalcloneoid.old",items); // NOI18N
-            }
-
+        LOG.log(TRACE, "sqlstore.persistencemgr.internalcloneoid.old", oid, newoid, oid == newoid);
         return newoid;
     }
 
@@ -2412,12 +2361,11 @@ public class PersistenceManagerImpl implements PersistenceManager {
      * Acquires a share lock from the persistence manager. This method will
      * put the calling thread to sleep if another thread is holding the exclusive lock.
      */
+    @Override
     public void acquireShareLock() {
         if ( ! _multithreaded) {
             return;
         }
-
-        boolean debug = logger.isLoggable(Logger.FINEST);
 
         synchronized (_readWriteLock) {
             //
@@ -2439,14 +2387,11 @@ public class PersistenceManagerImpl implements PersistenceManager {
                 _waiterCount++;
 
                 try {
-                    if (debug) {
-                        logger.finest("sqlstore.persistencemgr.acquiresharedlock",Thread.currentThread()); // NOI18N
-                    }
-
+                    LOG.log(TRACE, "sqlstore.persistencemgr.acquiresharedlock",Thread.currentThread());
                     _readWriteLock.wait();
                 } catch (InterruptedException e) {
                     throw new JDOFatalInternalException(I18NHelper.getMessage(messages,
-                            "jdo.persistencemanagerimpl.acquiresharelock.interrupted"), e);// NOI18N
+                            "jdo.persistencemanagerimpl.acquiresharelock.interrupted"), e);
                 } finally {
                     _waiterCount--;
                 }
@@ -2471,14 +2416,12 @@ public class PersistenceManagerImpl implements PersistenceManager {
            }
 
             _readWriteCount++;
-            if (debug) {
-              logger.finest("sqlstore.persistencemgr.acquiresharedlock.rdwrcount", // NOI18N
-                   Thread.currentThread(),new Long(_readWriteCount));
-            }
+            LOG.log(TRACE, "sqlstore.persistencemgr.acquiresharedlock.rdwrcount", Thread.currentThread(),
+                _readWriteCount);
 
             if (_readWriteCount <= 0) {
                 throw new JDOFatalInternalException(I18NHelper.getMessage(messages,
-                        "jdo.persistencemanagerimpl.acquiresharelock.failed"));// NOI18N
+                        "jdo.persistencemanagerimpl.acquiresharelock.failed"));
             }
         }
     }
@@ -2487,13 +2430,11 @@ public class PersistenceManagerImpl implements PersistenceManager {
      * Releases the share lock and notify any thread waiting to get an exclusive lock.
      * Note that every releaseShareLock() call needs to be preceeded by an acquireShareLock() call.
      */
+    @Override
     public void releaseShareLock() {
         if ( ! _multithreaded) {
             return;
         }
-
-        boolean debug = logger.isLoggable(Logger.FINEST);
-
 
         synchronized (_readWriteLock) {
             //
@@ -2509,7 +2450,7 @@ public class PersistenceManagerImpl implements PersistenceManager {
             try {
                 if (_readWriteCount == 0) {
                     throw new JDOFatalInternalException(I18NHelper.getMessage(messages,
-                            "jdo.persistencemanagerimpl.releasesharelock.failed"));// NOI18N
+                            "jdo.persistencemanagerimpl.releasesharelock.failed"));
                 }
 
                 _readWriteCount--;
@@ -2523,10 +2464,7 @@ public class PersistenceManagerImpl implements PersistenceManager {
                     _readWriteLock.notify();
                 }
 
-                if (debug) {
-                    Object[] items = new Object[] {Thread.currentThread(),new Long(_readWriteCount)};
-                    logger.finest("sqlstore.persistencemgr.releasesharedlock",items); // NOI18N
-                }
+                LOG.log(TRACE, "sqlstore.persistencemgr.releasesharedlock", Thread.currentThread(), _readWriteCount);
             }
         }
     }
@@ -2539,12 +2477,11 @@ public class PersistenceManagerImpl implements PersistenceManager {
      * attempts to acquire an exclusive lock. It is up to the callers to make sure
      * this does not happen.
      */
+    @Override
     public void acquireExclusiveLock() {
         if ( ! _multithreaded) {
             return;
         }
-
-        boolean debug = logger.isLoggable(Logger.FINEST);
 
         synchronized (_readWriteLock) {
             Thread currentThread = Thread.currentThread();
@@ -2566,15 +2503,11 @@ public class PersistenceManagerImpl implements PersistenceManager {
                     _waiterCount++;
 
                     try {
-
-                        if (debug) {
-                             logger.finest("sqlstore.persistencemgr.acquireexclusivelock",currentThread); // NOI18N
-                        }
-
+                        LOG.log(TRACE, "sqlstore.persistencemgr.acquireexclusivelock", currentThread);
                         _readWriteLock.wait();
                     } catch (InterruptedException e) {
                         throw new JDOFatalInternalException(I18NHelper.getMessage(messages,
-                                "jdo.persistencemanagerimpl.acquireexclusivelock.interrupted"), e);// NOI18N
+                                "jdo.persistencemanagerimpl.acquireexclusivelock.interrupted"), e);
                     } finally {
                         _waiterCount--;
                     }
@@ -2600,11 +2533,7 @@ public class PersistenceManagerImpl implements PersistenceManager {
                 _readWriteCount = -1;
                 _exclusiveLockHolder = currentThread;
 
-                if (debug) {
-                    Object[] items = new Object[] {currentThread,new Long(_readWriteCount)};
-                    logger.fine("sqlstore.persistencemgr.acquireexclusivelock.count",items); // NOI18N
-                }
-
+                LOG.log(DEBUG, "sqlstore.persistencemgr.acquireexclusivelock.count", currentThread, _readWriteCount);
             }
         }
     }
@@ -2614,27 +2543,22 @@ public class PersistenceManagerImpl implements PersistenceManager {
      * share lock. Note that every releaseShareLock() call needs to be preceeded by
      * an acquireExclusiveLock() call.
      */
+    @Override
     public void releaseExclusiveLock() {
         if ( ! _multithreaded) {
             return;
         }
 
-        boolean debug = logger.isLoggable(Logger.FINEST);
-
-
         synchronized (_readWriteLock) {
             try {
                 if (_readWriteCount >= 0) {
                     throw new JDOFatalInternalException(I18NHelper.getMessage(messages,
-                            "jdo.persistencemanagerimpl.releaseexclusivelock.failed"));// NOI18N
+                            "jdo.persistencemanagerimpl.releaseexclusivelock.failed"));
                 }
 
                 _readWriteCount++;
             } finally {
-                if (debug) {
-                    Object[] items = new Object[] {Thread.currentThread(),new Long(_readWriteCount)};
-                    logger.finest("sqlstore.persistencemgr.releaseexclusivelock",items); // NOI18N
-                }
+                LOG.log(TRACE, "sqlstore.persistencemgr.releaseexclusivelock", Thread.currentThread(), _readWriteCount);
 
                 //
                 // If _readWriteCount is 0 and _waiterCount is greater than 0,
@@ -2654,6 +2578,7 @@ public class PersistenceManagerImpl implements PersistenceManager {
     /**
      * Acquire lock for synchronizing field updates.
      */
+    @Override
     public void acquireFieldUpdateLock() {
         _fieldUpdateLock.acquire();
     }
@@ -2661,6 +2586,7 @@ public class PersistenceManagerImpl implements PersistenceManager {
     /**
      * Release lock for synchronizing field updates.
      */
+    @Override
     public void releaseFieldUpdateLock() {
         _fieldUpdateLock.release();
     }
@@ -2668,12 +2594,14 @@ public class PersistenceManagerImpl implements PersistenceManager {
     /**
      * Lock cache for getObjectById and result processing synchronization.
      */
+    @Override
     public void acquireCacheLock() {
         _cacheLock.acquire();
     }
 
     /** Release cache lock.
      */
+    @Override
     public void releaseCacheLock() {
         _cacheLock.release();
     }
@@ -2697,6 +2625,7 @@ public class PersistenceManagerImpl implements PersistenceManager {
          * @param name    the name of the file
          * @return true if the name should be included in the file list
          */
+        @Override
         public boolean accept(File dir, String name) {
             return name.endsWith(ext);
         }
